--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.aplana.autotest</groupId>
-    <artifactId>SberCUCU</artifactId>
+    <groupId>SberTest</groupId>
+    <artifactId>SberTest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <cucumber.version>4.7.0</cucumber.version>
         <junit.version>4.11</junit.version>
         <selenium.version>3.141.0</selenium.version>
